[tool.poetry]
name = "maps"
version = "0.1.0"
description = "A CLI for maps services."
authors = ["Sachin Kharude <sachinkharude10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
geopy = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
