[tool.poetry]
name = "maps-cli"
version = "0.0.3"
description = "A CLI for maps services."
authors = ["Sachin Kharude <sachinkharude10@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/sackh/maps-cli"
repository = "https://github.com/sackh/maps-cli"
packages = [
    { include = "maps" },
    { include = "maps/**/*.py" },
]
classifiers = [
        "Development Status :: 4 - Beta",
        "Intended Audience :: Developers",
        "Topic :: Software Development :: Libraries",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
]
keywords = ["cli", "maps"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
click = "^7.1.2"
geopy = "^2.1.0"
overpy = "^0.4"
simplejson = "^3.17.2"
requests = "^2.25.1"
geojsonio = "^0.0.3"
geojson = "^2.5.0"
here-location-services = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
isort = "^5.7.0"
coverage = "^5.3.1"
pytest-cov = "^2.10.1"
pytest-flake8 = "^1.0.7"
Sphinx = "^3.4.3"
sphinx-rtd-theme = "^0.5.1"

[tool.poetry.scripts]
maps = "maps.commands:maps"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/sackh/maps-cli/issues"
